deploy/podinfo-dep2.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics
  namespace: dev2
  annotations:
    flux.weave.works/tag.metricsd: glob:*
spec:
  replicas: 4
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metrics
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
