deploy/podinfo-lb-svc2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-lb
  namespace: dev2
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9898
      protocol: TCP
      name: http
  selector:
    app: podinfo
